[package]
name = "serialize-with-password"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libaes = "*"
argon2 = "*"
serde = { version="*", features = ["derive"], optional = true }
rmp-serde = { version="*", optional = true }

[features]
serde = ["dep:serde", "dep:rmp-serde"]
