[package]
name = "serialize-with-password"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["alloc"] }
argon2 = { version = "0.5.2", default-features = false, features = ["alloc"] }
serde = { version="1.0.188", features = ["derive"], optional = true }
rmp-serde = { version="1.1.2", optional = true }

[features]
serde = ["dep:serde", "dep:rmp-serde"]
